--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/mainlogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Team M11 Esports Bali - Berdiri pada awal April 2021 Team M11 Esports Divisi Dota 2 berhasil meraih beberapa kompetisi tingkat Indonesia dan International. Pada Bulan Oktober 2021 Team M11 Esports menambah Divisi baru yaitu PUBGM Ladies. Dan pada tahun 2022 Team M11 Esports membuka 2 Divisi yaitu MLBB dan Valorant. Team M11 Esports Store, Team M11 Esports Bali Indonesia"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/mainlogo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!-- REMIXICON -->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
