--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
     <link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" /> 
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
+    <!-- CSS File -->
+    <link rel="stylesheet" type='text/css' href="../src/style/modals.css"
 
     <!-- Google Analystic -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7262337961423123" crossorigin="anonymous"></script>
@@ -32,6 +34,8 @@
     <title>Team M11 Esports Bali</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+    </div>
+
   </body>
 </html>
