--- a/public/index.html
+++ b/public/index.html
@@ -18,9 +18,9 @@
     <link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" /> 
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
     <!-- CSS File -->
-    <link rel="stylesheet" type='text/css' href="../src/style/modals.css"
+    <link rel="stylesheet" type='text/css' href="/Front-End/src/index.css" />
 
-    <!-- Google Analystic -->
+    
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7262337961423123" crossorigin="anonymous"></script>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-MF1S89G15W"></script>
