--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
 
     gtag('config', 'G-MF1S89G15W');
     </script>
+    <script type='text/javascript' src='//pl18079374.highperformancecpmgate.com/72/4f/37/724f37894c42f2d323168fe4ac491280.js'></script>
     <title>Team M11 Esports Bali</title>
   </head>
   <body>
