--- a/public/index.html
+++ b/public/index.html
@@ -30,10 +30,13 @@
     </script>
     <script type='text/javascript' src='//pl18079374.highperformancecpmgate.com/72/4f/37/724f37894c42f2d323168fe4ac491280.js'></script>
     <title>Team M11 Esports Bali</title>
+    
   </head>
   <body>
     <div id="root">
     </div>
-
+    <script async="async" data-cfasync="false" src="//pl18080703.highperformancecpmgate.com/d96737bee6c4999e15d25f1af2925e08/invoke.js"></script>
+    <div id="container-d96737bee6c4999e15d25f1af2925e08"></div>
+    <script type='text/javascript' src='//pl18079374.highperformancecpmgate.com/72/4f/37/724f37894c42f2d323168fe4ac491280.js'></script>
   </body>
 </html>
