--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" /> 
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
     
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7262337961423123" crossorigin="anonymous"></script>
+    <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7262337961423123" crossorigin="anonymous"></script> -->
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-MF1S89G15W"></script>
     <script>
@@ -35,8 +35,8 @@
   <body>
     <div id="root">
     </div>
-    <script async="async" data-cfasync="false" src="//pl18080703.highperformancecpmgate.com/d96737bee6c4999e15d25f1af2925e08/invoke.js"></script>
-    <div id="container-d96737bee6c4999e15d25f1af2925e08"></div>
-    <script type='text/javascript' src='//pl18079374.highperformancecpmgate.com/72/4f/37/724f37894c42f2d323168fe4ac491280.js'></script>
+    <!-- <script async="async" data-cfasync="false" src="//pl18080703.highperformancecpmgate.com/d96737bee6c4999e15d25f1af2925e08/invoke.js"></script> -->
+    <!-- <div id="container-d96737bee6c4999e15d25f1af2925e08"></div> -->
+    <!-- <script type='text/javascript' src='//pl18079374.highperformancecpmgate.com/72/4f/37/724f37894c42f2d323168fe4ac491280.js'></script> -->
   </body>
 </html>
